Clean code, clean imports, restructure project